<resources>
    <string name="app_name">Term Project</string>
    <string name="activity_add">Add Schedule</string>
    <string name="calendar_year">.</string>
    <string name="calendar_month">.</string>
    <string name="calendar_day">.</string>
    <string name="title_month">Monthly Calendar</string>
    <string name="title_week">Weekly Calendar</string>
    <string name="title_day">Daily Calendar</string>
    <string name="menu_add">Add Schedule</string>
    <string name="menu_month">Monthly View</string>
    <string name="menu_week">Weekly View</string>
    <string name="menu_day">Daily View</string>
    <string name="button_last">Last</string>
    <string name="button_today">Today</string>
    <string name="button_next">Next</string>
    <string name="button_add">Add</string>
    <string name="button_pick">Pick</string>
    <string name="button_pick_day">Pick Day</string>
    <string name="button_pick_time">Pick Time</string>
    <string name="button_save">Save</string>
    <string name="button_reset">Reset</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_edit">Edit</string>
    <string name="button_detail">Detail</string>
    <string name="button_delete">Delete</string>
    <string name="button_select">Select</string>
    <string name="button_attached">Attached</string>
    <string name="text_start_day">Start</string>
    <string name="text_end_day">End</string>
    <string name="text_date">Date</string>
    <string name="text_schedule">Schedule</string>
    <string name="text_no_schedule">No Schedule</string>
    <string name="text_subject">Subject</string>
    <string name="text_subject_edit">Enter Schedule Subject</string>
    <string name="text_place">Place</string>
    <string name="text_place_edit">Enter Schedule Place</string>
    <string name="text_description">Description</string>
    <string name="text_description_edit">Enter Schedule Description</string>
    <string name="text_attachment">Attached Media</string>
    <string name="text_start">"[START] "</string>
    <string name="text_end">"[END] "</string>
    <string name="text_detail_title">Detailed Schedule</string>
    <string name="text_detail_start">Start on</string>
    <string name="text_detail_end">End on</string>
    <string name="text_image">Image</string>
    <string name="text_video">Video</string>
    <string name="text_attached_nothing">No Media Attached</string>
    <string name="alert_delete_title">Delete Schedule</string>
    <string name="alert_delete_description">Do you delete this schedule?</string>
    <string name="alert_delete_confirm">Yes</string>
    <string name="alert_delete_cancel">No</string>
    <string name="item_fast_setting">Fast Time Setting</string>
    <string name="item_ten_minutes">Ten Minutes</string>
    <string name="item_half_hour">Half Hour</string>
    <string name="item_one_hour">1 Hour</string>
    <string name="item_two_hours">2 Hours</string>
    <string name="item_three_hours">3 Hours</string>
    <string name="item_four_hours">4 Hours</string>
    <string name="item_five_hours">5 Hours</string>
    <string name="item_six_hours">6 Hours</string>
    <string name="item_eight_hours">8 Hours</string>
    <string name="item_half_day">Half Day</string>
    <string name="item_whole_day">Whole Day</string>
    <string name="message_saved">Schedule Saved</string>
    <string name="message_edited">Schedule Edited</string>
    <string name="message_deleted">Schedule Deleted</string>
    <string name="message_attached">Attached Media</string>
    <string name="message_image_failed">Only Image files can be attached</string>
    <string name="message_video_failed">Only Video files can be attached</string>
    <string name="message_attachment_deleted">Attachment Deleted</string>
    <string name="message_unable_set">Unable to set before start time</string>
    <string name="JANUARY">January</string>
    <string name="FEBRUARY">February</string>
    <string name="MARCH">March</string>
    <string name="APRIL">April</string>
    <string name="MAY">May</string>
    <string name="JUNE">June</string>
    <string name="JULY">July</string>
    <string name="AUGUST">August</string>
    <string name="SEPTEMBER">September</string>
    <string name="OCTOBER">October</string>
    <string name="NOVEMBER">November</string>
    <string name="DECEMBER">December</string>
    <string name="SUNDAY">SUNDAY</string>
    <string name="MONDAY">MONDAY</string>
    <string name="TUESDAY">TUESDAY</string>
    <string name="WEDNESDAY">WEDNESDAY</string>
    <string name="THURSDAY">THURSDAY</string>
    <string name="FRIDAY">FRIDAY</string>
    <string name="SATURDAY">SATURDAY</string>
    <string name="SUN">SUN</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="AM">A.M.</string>
    <string name="PM">P.M.</string>
    <string name="calendar_error">ERROR</string>
</resources>
