<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_weekly"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="@color/colorWhite"
    tools:context="com.example.hd.termproject.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Year and Month"
        android:textColor="@color/BLACK"
        android:id="@+id/textWeeklyYearMonth"
        android:textSize="20dp"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_marginTop="@dimen/weekly_vertical_margin"
                android:layout_marginBottom="@dimen/weekly_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_date"
                    android:textSize="18dp"
                    android:textColor="@color/BLACK"
                    android:id="@+id/textWeeklyDate"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_schedule"
                    android:textSize="18dp"
                    android:textColor="@color/BLACK"
                    android:id="@+id/textWeeklySchedule"
                    android:textAlignment="center" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/popup_vertical_margin"
                android:layout_marginBottom="@dimen/popup_vertical_margin"
                android:background="@color/colorPrimary" />

            <TableRow
                android:layout_marginTop="@dimen/weekly_vertical_margin"
                android:layout_marginBottom="@dimen/weekly_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/SUN"
                    android:textColor="@color/RED"
                    android:layout_marginRight="@dimen/popup_vertical_margin"
                    android:layout_marginLeft="@dimen/popup_vertical_margin"
                    android:clickable="true"
                    android:id="@+id/textSunday"
                    android:textAlignment="textStart" />

                <ListView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:id="@+id/scheduleSundayFrame" />
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/weekly_vertical_margin"
                android:layout_marginBottom="@dimen/weekly_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/MON"
                    android:textColor="@color/BLACK"
                    android:layout_marginRight="@dimen/popup_vertical_margin"
                    android:layout_marginLeft="@dimen/popup_vertical_margin"
                    android:clickable="true"
                    android:id="@+id/textMonday"
                    android:textAlignment="textStart" />

                <ListView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:id="@+id/scheduleMondayFrame" />
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/weekly_vertical_margin"
                android:layout_marginBottom="@dimen/weekly_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TUE"
                    android:textColor="@color/BLACK"
                    android:layout_marginRight="@dimen/popup_vertical_margin"
                    android:layout_marginLeft="@dimen/popup_vertical_margin"
                    android:clickable="true"
                    android:id="@+id/textTuesday"
                    android:textAlignment="textStart" />

                <ListView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:id="@+id/scheduleTuesdayFrame" />
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/weekly_vertical_margin"
                android:layout_marginBottom="@dimen/weekly_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/WED"
                    android:textColor="@color/BLACK"
                    android:layout_marginRight="@dimen/popup_vertical_margin"
                    android:layout_marginLeft="@dimen/popup_vertical_margin"
                    android:clickable="true"
                    android:id="@+id/textWednesday"
                    android:textAlignment="textStart" />

                <ListView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:id="@+id/scheduleWednesdayFrame" />
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/weekly_vertical_margin"
                android:layout_marginBottom="@dimen/weekly_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/THU"
                    android:textColor="@color/BLACK"
                    android:layout_marginRight="@dimen/popup_vertical_margin"
                    android:layout_marginLeft="@dimen/popup_vertical_margin"
                    android:clickable="true"
                    android:id="@+id/textThursday"
                    android:textAlignment="textStart" />

                <ListView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:id="@+id/scheduleThursdayFrame" />
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/weekly_vertical_margin"
                android:layout_marginBottom="@dimen/weekly_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/FRI"
                    android:textColor="@color/BLACK"
                    android:layout_marginRight="@dimen/popup_vertical_margin"
                    android:layout_marginLeft="@dimen/popup_vertical_margin"
                    android:clickable="true"
                    android:id="@+id/textFriday"
                    android:textAlignment="textStart" />

                <ListView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:id="@+id/scheduleFridayFrame" />
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/weekly_vertical_margin"
                android:layout_marginBottom="@dimen/weekly_vertical_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/SAT"
                    android:textColor="@color/BLUE"
                    android:layout_marginRight="@dimen/popup_vertical_margin"
                    android:layout_marginLeft="@dimen/popup_vertical_margin"
                    android:clickable="true"
                    android:id="@+id/textSaturday"
                    android:textAlignment="textStart" />

                <ListView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:id="@+id/scheduleSaturdayFrame" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/CYAN"
            android:text="@string/button_last"
            android:id="@+id/buttonLastWeek" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/CYAN"
            android:text="@string/button_today"
            android:id="@+id/buttonWeeklyToday" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/CYAN"
            android:text="@string/button_pick"
            android:id="@+id/buttonWeeklyPick"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/CYAN"
            android:text="@string/button_next"
            android:id="@+id/buttonNextWeek" />
    </LinearLayout>
</LinearLayout>